# framework

./: .gitmodules  README.md
_frameworkbuild/: CMakeLists.txt
_frameworkbuild/frameworkbuild/: CMakeLists.txt
_frameworkbuild/frameworklib/: CMakeLists.txt
framework/: CMakeLists.txt  framework.sln
framework/awscli/: new_user_credentials.csv
framework/awspem/: test1.pem  test1.ppk
framework/azurepem/: azure-test1.pem  azure-test1.ppk
framework/framework/: CMakeLists.txt  IntervalTimer.cpp  IntervalTimer.hpp  Logger.hpp  Pipeline.cpp  Pipeline.hpp  PipelineStage.cpp  PipelineStage.hpp  ScopedTimer.cpp  ScopedTimer.hpp  TcpServer.cpp  TcpServer.hpp  ctpl_threadpool.hpp  framework.vcxproj  framework.vcxproj.filters
framework/prototype/: CMakeLists.txt  Prototype.cpp  prototype.vcxproj  prototype.vcxproj.filters
framework/scp/: CMakeLists.txt  ScpPipeline.cpp  ScpPipeline.hpp  scp.cpp  scp.vcxproj  scp.vcxproj.filters
